--- a/_includes/themes/evjekylltheme/default.html
+++ b/_includes/themes/evjekylltheme/default.html
@@ -68,9 +68,9 @@
 						<input type="text" class="form-control input-sm" placeholder="Search" id="query">
 						</div>
 					</form>
-					<div class="nav-icon">
+					<!-- <div class="nav-icon">
 						<a href="/rss.xml"><i class="fa fa-rss fa-2x"></i></a>
-					</div>
+					</div> -->
 				</div>
 			</div>
     </div>
