--- a/_includes/themes/evjekylltheme/post.html
+++ b/_includes/themes/evjekylltheme/post.html
@@ -11,7 +11,7 @@
 						, Last modified on {{ page.last_updated | date: '%B %d, %Y' }}
 					{% endif %}
 					<span class="entry-author">by {{ site.author.name }}</span>
-					| <a class="revision-histroy" href="https://github.com/einverne/einverne.github.io/commits/master/{{ page.path }}" target="_blank">View revision history</a>
+					<!--| <a class="revision-histroy" href="https://github.com/einverne/einverne.github.io/commits/master/{{ page.path }}" target="_blank">View revision history</a> -->
 				</div>
 					{{ content }}
 
@@ -63,7 +63,7 @@
 				</ul>
 			{% endunless %}  
 		<div id="floatbox">
-			<div class="g-plusone" data-annotation="inline" data-width="300"></div>				
+			<!-- <div class="g-plusone" data-annotation="inline" data-width="300"></div>				 -->
 			<div id="toc"></div></div>
 	</div>
 </div>
