post: a study of fresco

--- a/_includes/themes/evjekylltheme/default.html
+++ b/_includes/themes/evjekylltheme/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
+
 		<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 		{% if post.excerpt %}<meta name="description" content="{{ post.excerpt | strip_html }}">{% endif %}
@@ -92,7 +92,7 @@
 
 			<hr>
 			<footer>
-				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. Powered by <a href="http://jekyllrb.com" target="_blank" title="The simple, blog-aware, static site generator.">Jekyll</a>. Hosted on <a href="http://github.com/einverne" target="_blank" title="Ein Verne's GitHub Repos">GitHub</a>.
+				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. Powered by <a href="http://jekyllrb.com" target="_blank" title="The simple, blog-aware, static site generator.">Jekyll</a>. Hosted on <a href="https://github.com/Ringares" target="_blank" title="Ein Verne's GitHub Repos">GitHub</a>.
 				<br><br>
 			</footer>
 		</div>
